fix offer overflow (catalog)

--- a/source/sass/blocks/offer.scss
+++ b/source/sass/blocks/offer.scss
@@ -1,7 +1,6 @@
 //*Бонусное предложение (catalog)
 
 .offer {
-  height: 290px;
   width: 100%;
 
   box-sizing: border-box;
@@ -34,7 +33,7 @@
 
 .offer__wrapper {
   padding: 65px 59px 43px;
-  height: 100%;
+  min-height: 290px;
 
   display: flex;
   align-items: flex-end;
@@ -82,6 +81,7 @@
 
   .offer__wrapper {
     padding: 70px 124px;
+    min-height: 200px;
 
     justify-content: flex-end;
 
@@ -107,6 +107,7 @@
 
   .offer__wrapper {
     padding: 42px 43px 42px 41px;
+    min-height: 290px;
   }
 
   .offer__text {
